--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -48,7 +48,7 @@
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['pedido-sugeridos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
-                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido Plasticaucho</font>
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">shopping_cart</span>
@@ -64,7 +64,7 @@
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['tercerosalmacen'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">person</span>
-                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Usuarios</font>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Terceros</font>
             </a>
             <a mat-list-item (click)="logout()" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">logout</span>
