--- a/src/app/components/dashboard-cl/dashboard-cl.component.html
+++ b/src/app/components/dashboard-cl/dashboard-cl.component.html
@@ -14,9 +14,8 @@
     </div>
   <mat-grid-list cols="3" rowHeight="225px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-        <mat-card class="dashboard-card">
+        <mat-card class="dashboard-card" [ngClass]="{ 'disabled-card': card.title === 'Pedido Sugerido' }">
             <mat-card-header>
-
                 <mat-card-title>
                     <span class="material-icons-outlined" style="font-size: 40px ; color: #3163ad">{{card.figure}}</span>
                     <br><br>
