--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -37,7 +37,7 @@
                                 CLIENTE
                             </option>
                         </select>
-                        <button class="btn btn-primary ml-2" (click)="realizarAccion()" [disabled]="lstDetalleMovimientos.length > 0">ELEGIR</button>
+                        <button class="btn btn-primary ml-2" (click)="realizarAccion()" [disabled]="identificacion !== '' || nombre !== '' || correo !== '' || ciudad !== '' || direccion !== '' || telefono !== '' || lstDetalleMovimientos.length > 0">ELEGIR</button>
                     </div>
                     <small *ngIf="selectTipo">
                         <small *ngIf="selectTipo" style="color: red; ">
@@ -46,6 +46,19 @@
                     </small>
                 </div>
             </form>
+            <br>
+            <div class="form-group">
+                <div class="d-flex">
+                    <input type="text" [disabled]="true" [(ngModel)]="identificacion" class="form-control input-1" placeholder="Cédula/RUC">
+                    <input type="text" [disabled]="true" [(ngModel)]="nombre" class="form-control input-1" placeholder="Nombre">
+                    <input type="text" [disabled]="true" [(ngModel)]="correo" class="form-control input-1" placeholder="Correo">
+                </div>
+                <div class="d-flex">
+                    <input type="text" [disabled]="true" [(ngModel)]="ciudad" class="form-control input-1" placeholder="Ciudad">
+                    <input type="text" [disabled]="true" [(ngModel)]="direccion" class="form-control input-1" placeholder="Dirección">
+                    <input type="text" [disabled]="true" [(ngModel)]="telefono" class="form-control input-1" placeholder="Teléfono">
+                </div>
+            </div>
             <br><br>
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
