Nombre en Almacen

--- a/src/app/components/users/terceros-edit/terceros-edit.component.html
+++ b/src/app/components/users/terceros-edit/terceros-edit.component.html
@@ -32,8 +32,8 @@
                     <label for="grupo">Almacén</label>
                     <select class="form-control" (change)="changeGroup5($event)" formControlName="almacen">
                         <option [value]=" 0 ">Seleccione un almacén</option>
-                        <option *ngFor="let almacen of lstAlmacenes" [value]="almacen.direccion">
-                            {{almacen.direccion}}
+                        <option *ngFor="let almacen of lstAlmacenes" [value]="almacen.nombre_almacen">
+                            {{almacen.nombre_almacen}}
                         </option>
                     </select>
                     <small *ngIf="selectAlmacenes">
