--- a/src/app/components/warehouses/almacenes-create/almacenes-create.component.html
+++ b/src/app/components/warehouses/almacenes-create/almacenes-create.component.html
@@ -27,6 +27,19 @@
                         </small>
                     </small>
                 </div>
+
+                <div class="form-group">
+                    <label for="nombre_almacen">Nombre del almacén</label>
+                    <input type="text" class="form-control" id="nombre_almacen"
+                        placeholder="Ingrese el nombre del almacén" formControlName="nombre_almacen">
+                    <small
+                        *ngIf="warehousesForm.controls['nombre_almacen'].invalid && (warehousesForm.controls['nombre_almacen'].dirty || warehousesForm.controls['nombre_almacen'].touched)">
+                        <small *ngIf="warehousesForm.controls['nombre_almacen'].errors?.['required']"
+                            style="color: red;">
+                            Debe ingresar el nombre.
+                        </small>
+                    </small>
+                </div>
                 
                 <div class="form-group">
                     <label for="direccion">Direccion</label>
