--- a/src/app/components/warehouses/almacenes/almacenes.component.html
+++ b/src/app/components/warehouses/almacenes/almacenes.component.html
@@ -15,6 +15,7 @@
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 10%; ">Sociedad</th>
+                        <th style="width: 10%; ">Nombre</th>
                         <th style="width: 10%; ">Direccion</th>
                         <th style="width: 15%; ">Telefono</th>
                         <th style="width: 20%; ">Establecimiento</th>
@@ -25,6 +26,7 @@
                 <tbody style="color: #767695;">
                     <tr *ngFor="let almacen of lstAlmacenes">
                         <td>{{almacen.nombresociedad}}</td>
+                        <td>{{almacen.nombre_almacen}}</td>
                         <td>{{almacen.direccion}}</td>
                         <td>{{almacen.telefono}}</td>
                         <td>{{almacen.codigo}}</td>
