--- a/src/app/components/warehouses/almacenessociedad-edit/almacenessociedad-edit.component.html
+++ b/src/app/components/warehouses/almacenessociedad-edit/almacenessociedad-edit.component.html
@@ -14,6 +14,18 @@
         <div class="card-body ">
             <form [formGroup]="warehousesForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
+                    <label for="nombre_almacen">Nombre del almacén</label>
+                    <input type="text" class="form-control" id="nombre_almacen"
+                        placeholder="Ingrese el nombre del almacén" formControlName="nombre_almacen">
+                    <small
+                        *ngIf="warehousesForm.controls['nombre_almacen'].invalid && (warehousesForm.controls['nombre_almacen'].dirty || warehousesForm.controls['nombre_almacen'].touched)">
+                        <small *ngIf="warehousesForm.controls['nombre_almacen'].errors?.['required']"
+                            style="color: red;">
+                            Debe ingresar el nombre.
+                        </small>
+                    </small>
+                </div>
+                <div class="form-group">
                     <label for="grupo">Sociedades</label>
                     <select class="form-control" (change)="changeGroup($event)" formControlName="sociedad">
                         <option [value]=" 0 " selected>Seleccione una sociedad</option>
