--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -34,13 +34,11 @@
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuentas</font>
                 </a>
             </div>
-            <!--
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-productos'] } }]"
                 style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Productos</font>
             </a>
-            -->
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-almacen'] } }]"
                 style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
@@ -48,7 +46,7 @@
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['pedido-sugeridos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
-                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido Plasticaucho</font>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">shopping_cart</span>
