--- a/src/app/components/navegation-adm/navegation-adm.component.html
+++ b/src/app/components/navegation-adm/navegation-adm.component.html
@@ -52,10 +52,10 @@
                 <span class="material-icons-outlined" style="font-size: 24px">person</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Grupos</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentAdmin: ['proveedores'] } }]" style="color: white">
+            <!--<a mat-list-item [routerLink]="[{ outlets: { contentAdmin: ['proveedores'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Proveedores</font>
-            </a>
+            </a>-->
             <a mat-list-item [routerLink]="[{ outlets: { contentAdmin: ['sociedades'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sociedades</font>
@@ -65,10 +65,10 @@
                 <span class="material-icons-outlined" style="font-size: 24px">location_city</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Almacenes</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentAdmin: ['terceros'] } }]" style="color: white">
+            <!--<a mat-list-item [routerLink]="[{ outlets: { contentAdmin: ['terceros'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">person</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Usuarios</font>
-            </a>
+            </a>-->
             <a mat-list-item (click)="logout()" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">logout</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Salir</font>
