--- a/src/app/components/sales/ver-factura/ver-factura.component.css
+++ b/src/app/components/sales/ver-factura/ver-factura.component.css
@@ -111,6 +111,12 @@
     margin-left: 20px;
   }
 
+  .cool-input3 {
+    width: 60px;
+    height: 40px;
+    margin-left: 20px;
+  }
+
   .boton {
     width: 100px;
     height: 40px;
@@ -126,5 +132,11 @@
     text-align: center;
   }
   
+  .cool-label {
+    font-size: 18px;
+    padding: 8px;
+    border-radius: 4px;
+  }
+
   /* Agrega tus estilos personalizados aquí */
   
